# pyxel

./: .gitignore
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/pyxel-wrapper-ts/: Cargo.toml  build.rs
rust/pyxel-wrapper-ts-bindgen/: .gitignore  Cargo.toml
rust/pyxel-wrapper-ts-bindgen/pkg/: .gitignore  pyxel.ts  pyxel_wrapper_ts.d.ts
rust/pyxel-wrapper-ts-bindgen/src/: generate.rs  generate_wrapper_rust.rs  generated.rs  main.rs  template.rs
rust/pyxel-wrapper-ts-macros/: Cargo.toml
rust/pyxel-wrapper-ts-macros/src/: lib.rs
rust/pyxel-wrapper-ts-pack/: .gitignore  Cargo.toml  build.sh  deno.json
rust/pyxel-wrapper-ts-pack/pkg/: index.html  instance.js
rust/pyxel-wrapper-ts-pack/ts/pkg/: index.html  instance.js
rust/pyxel-wrapper-ts-pack/ts/src/: index.ts  server.ts
rust/pyxel-wrapper-ts-pack/ts/tools/: bundle.ts
rust/pyxel-wrapper-ts-types/: Cargo.toml
rust/pyxel-wrapper-ts-types/src/: lib.rs
rust/pyxel-wrapper-ts/src/: generated.rs  image_wrapper.rs  lib.rs  pyxel_singleton.rs  resouce_wrapper.rs
ts/: build.sh  deno.json  main.ts  tsconfig.json  vite.config.ts
ts/pkg/: index.html
ts/src/: index.ts  main.ts  server.ts
ts/tools/: bundle.ts
