[package]
name = "pyxel-wrapper-ts-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
pyxel-wrapper-ts-types = { path = "../pyxel-wrapper-ts-types" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"
