[package]
name = "pyxel-wrapper-ts-pack"
version = "0.1.0"
edition = "2021"
authors = ["seisuke"]
license = "MIT"
description = "Packaging crate for WebAssembly/TypeScript bindings of Pyxel"
repository = "https://github.com/seisuke/pyxel"

[lib]
crate-type = ["staticlib"]

[dependencies]
pyxel = { package = "pyxel-engine", path = "../pyxel-engine" }
getrandom = { version = "0.3.2", default-features = false, features = ["wasm_js"] }
