[package]
name = "pyxel-wrapper-ts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]
default = []
static-link = []

[dependencies]
pyxel = { package = "pyxel-engine", path = "../pyxel-engine" }
pyxel-wrapper-ts-macros = { path = "../pyxel-wrapper-ts-macros" }
getrandom = { version = "0.3.2", default-features = false, features = ["wasm_js"] }

[build-dependencies]
syn = "2.0"