[package]
name = "pyxel-wrapper-ts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]
default = []
static-link = []

[dependencies]
engine = { package = "pyxel-engine", path = "../pyxel-engine" }
pyxel-wrapper-ts-macros = { path = "../pyxel-wrapper-ts-macros" }
getrandom = { version = "0.3.2", default-features = false, features = ["wasm_js"] }
once_cell = "1.19.0"

[build-dependencies]
syn = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyxel-wrapper-ts-types = { path = "../pyxel-wrapper-ts-types" }
